2010-04-12  Thierry LAFAGE  <lafage@dingdong.irisa.fr>

	* gcc/config/cil32/emit-cil.c: if -g is enabled, add .line
	directives before each method/function definition.
	* gcc/config/cil32/t-cil32: gcc/config/cil32/emit-cil.c depends on
	source-location.h


2010-03-19  Thierry LAFAGE  <thierry.lafage@inria.fr>

	* gcc/config/cil32/simp-cond.c: added condition inversion for brtrue
	and brfalse (for integer args and if -fcil32simpcond is activated),
	added condition inversion for floating-point branches when
	-fcil32simpcondfloat is activated.
	* gcc/config/cil32/cil32.opt: added -fcil32simpcond and
	-fcil32simpcondfloat options
	* gcc/config/cil32/cil-stmt.c: added brtrue and brfalse to list of
	conditional branches.
	* gcc/config/cil32/cil32.h: added option -fcil32simpcond to
	optimization options and size optimizations options, and
	-fcil32simpcondfloat to size optimizations options. Also added -O
	option to assembly pass when -On (n!=0) is set on the command line.

2010-03-10  Thierry LAFAGE  <thierry.lafage@inria.fr>

	* gcc/testsuite/gcc.dg/pr19340.c: skip test for cil32-*-* (scheduler
	test)
	* gcc/config/cil32/t-cil32: added missing dependencies
	wrt. previously commited source-location.h

2010-01-22  Thierry LAFAGE  <thierry.lafage@inria.fr>

	* gcc/testsuite/gcc.dg/20020312-2.c: added case for __cil32__
		  architecture in order to make test pass.

2010-01-18  Thierry LAFAGE  <thierry.lafage@inria.fr>

	* gcc/config/cil32/source-location.h: new file defining utilities
		  for source location information within CIL statements.
	* gcc/config/cil32/missing-protos.c (replace_args): add source
		  location information in CIL statements.
	* gcc/config/cil32/gimple-to-cil.c: add source location information
		  in CIL statements.
	* gcc/config/cil32/remove-temps.c: add source location information
		  in CIL statements.
	* gcc/config/cil32/emit-cil.c: add source location information in
		  CIL statements.